# AccelScript

./: .clinerules  .gitignore  CMakeLists.txt  README.md  jest.config.js  package-lock.json  package.json  syntax.md  tsconfig.json  vcpkg.json
.github/workflows/: deploy.yml
example/: example_custom_buffer.axs
examples/: compute_add.axs  triangle.axs
src/: AccelScript.g4  build.js  example.js  example_native_buffer.js  parser.cpp  parser.hpp  parser.ts  runtime.js  transpiler.js
test/: example_custom_buffer.axs  example_native_buffer.axs  example_triangle.axs  parser.test.ts  parser_test.cpp  test.js  test_transpiler.js
